deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-app-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-app
  template:
    metadata:
      labels:
        app: istio-app
        version: canary
    spec:
      containers:
      - name: istio-app
        image: tuliofergulha/istio-app:canary
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-app-release
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-app
  template:
    metadata:
      labels:
        app: istio-app
        version: release
    spec:
      containers:
      - name: istio-app
        image: tuliofergulha/istio-app:release
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: istio-app-service
spec:
  type: LoadBalancer
  selector:
    app: istio-app
  ports:
  - port: 8000
    targetPort: 3000
    nodePort: 30000
