destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-app-dr
spec:
  host: istio-app-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: canary
    labels:
      version: canary
    trafficPolicy:
      loadBalancer:
        simple: LEAST_REQUEST
  - name: release
    labels:
      version: release
