ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: http2
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-app-vs
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway
  http:
  - route:
    - destination:
        host: istio-app-service
        subset: canary
      weight: 0
    - destination:
        host: istio-app-service
        subset: release
      weight: 100

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-app-dr
spec:
  host: istio-app-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: canary
    labels:
      version: canary
    trafficPolicy:
      loadBalancer:
        simple: LEAST_REQUEST
  - name: release
    labels:
      version: release
