virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-app-vs
spec:
  hosts:
  - istio-app-service
  http:
  - route:
    - destination:
        host: istio-app-service
        subset: canary
      weight: 0
    - destination:
        host: istio-app-service
        subset: release
      weight: 100
