authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-app-ap
spec:
  selector:
    matchLabels:
      app: istio-app
  action: ALLOW
  rules:
    - when:
        - key: request.auth.claims[roles]
          values:
            - "IstioApp.Read"
            - "IstioApp.Write"
      to:
        - operation:
            methods: [ "*" ]
            paths: [ "*" ]

---

apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: istio-app-ra
spec:
  selector:
    matchLabels:
      app: istio-app
  jwtRules:
    - issuer: istio-app-auth
      jwks: '{"keys":[{"kty":"oct","use":"sig","kid":"istio-app","k":"dSFIVTJoMXVoOToqSEFz","alg":"HS256","issuer":"istio-app-auth"}]}'
      forwardOriginalToken: true
